--- a/global.css
+++ b/global.css
@@ -84,9 +84,13 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 4.5rem;
+    height: 3.7rem;
   }
-  
+
+  footer i {
+    font-size: 2.2rem;
+  }
+
   footer a {
     color: white; 
     text-decoration: none; 
