--- a/global.css
+++ b/global.css
@@ -1,197 +1,244 @@
 :root {
-    --gutter: 20px;
-    --c-primary: #000000;
-  }
-
- html, body {
-    margin: 0;
-    padding: 0;
-    overflow: hidden; 
-    touch-action: none; 
-    height: 100%; 
-  }
-  
-  
-  * {
-    font-family: 'roboto', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-weight: 500;
-  }
-  
-  body {
-    background: #fff;
-    color: #000000;
-    font-family: Roboto, Helvetica, sans-serif;
-    padding: 5rem;
-  }
-
-  h1{
-    font-size: 2rem;
-    padding: 0px;
-    margin: 0px;
-    font-weight: 900;
-    margin-right: 0.4rem;
-  }
-
-  h2 {
-    margin: 0px;
-    padding: 0px;
-    margin-bottom:1rem;
-    font-weight: 600;
-  }
-  
-  
-  p {
-    font-size: 0.9rem;
-    line-height: 1.2;
-  }
-  
-  i {
-    font-size: 1.5rem;
-  }
-  
-  
-  .viewport {
-    width: 100vw; 
-    height: 100vh; 
-    position: absolute;
-    top: 0; 
-    left: 0; 
-    transform: none; 
-    background: var(--c-primary);
-    overflow: hidden;
-  }
-  
-  
-  header {
-    position: absolute;
-    top: 1rem;
-    color: #fafafa;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    width: 100%;
-  }
-  
-  footer {
-    width: calc(100% - var(--gutter) * 2);
-    background: var(--c-primary);
-    color: #fff;
-    position: absolute;
-    bottom: 0;
-    padding: var(--gutter);
-    border-radius: 3rem;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 3.7rem;
-  }
-
-  footer i {
-    font-size: 2.2rem;
-  }
-
-  footer a {
-    color: white; 
-    text-decoration: none; 
-    transition: color 0.3s ease; 
-  }
-
-  footer a:hover {
-    color: #f0f0f0; 
-  }
-  
-  footer a.active {
-    color: #f0f0f0; 
-  }
-  
-  .viewport {
-    overflow: visible;
-  }
-  .app--body {
-    position: absolute;
-    top: 9rem;
-    bottom: 0;
-    width: 100%;
-    background: #fff;
-    border-radius: 1.5rem 1.5rem 0 0;
-    box-shadow: 0 -0.5rem 1.5rem rgba(0, 0, 0, 0.17);
-    padding: var(--gutter);
-    box-sizing: border-box;
-    overflow-y: auto; 
-    margin: 0;
-  }
-  
-  .app--body no-scrollbar {
-    width: 100%;
-  }
-  
-  .app--body > * {
-    width: 100%; 
-    max-width: 100%;
-    margin: 0 auto; 
-  }
-  
-  .app > * {
-    grid-column: 1/-1;
-  }
+  --gutter: 20px;
+  --c-primary: #000000;
+}
 
 
-  .app--body > * {
-    width: 100%; 
-    max-width: 100%;
-    margin: 0 auto; 
-  }
-  
-  .app--body > * {
-    width: 100%; 
-    max-width: 100%;
-    margin: 0 auto; 
-  }
-  
-  
-  button:hover {
-    cursor: pointer;
-  }
+* {
+  font-family: 'roboto', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-weight: 500;
+}
 
-  .hs {
-    position: absolute;
-    top: 5.1rem; 
-    display: flex;
-    justify-content: center;
-    z-index: 1;
-    display: flex;
-    transform: translateX(-50%);
-    left: 50%;
-   
-  }
-  
-  .hs, .vs {
-    width: 80%; 
-    background: #fff;
-    padding: 0.7rem;
-    border-radius: 1.2rem;
-    box-shadow: 0 0 3rem rgba(0, 0, 0, 0.17);
-  }
-  
-  .vs {
-    max-width: 92%;
-    width: 87%;
-    position: relative; 
-    padding-bottom: 1rem;
-    text-align: center;
-    color: #000000;
-    transform: translateX(-50%);
-    left: 50%;
-    margin: 0px
-  }
-  
-  #logo {
-    width: 3.5rem;
-    margin: 0px;
-  }
+body {
+  background: #fff;
+  color: #000000;
+  font-family: Roboto, Helvetica, sans-serif;
+  padding: 5rem;
+}
+h1{
+  font-size: 2rem;
+  padding: 0px;
+  margin: 0px;
+  font-weight: 900;
+  margin-right: 0.4rem;
+}
+h2 {
+  margin: 0px;
+  padding: 0px;
+  margin-bottom:1rem;
+  font-weight: 600;
+}
+
+
+p {
+  font-size: 0.9rem;
+  line-height: 1.2;
+}
+
+i {
+  font-size: 1.5rem;
+}
+
+.vs {
+  top: 3rem;
+}
+
+ul {
+  list-style: none;
+  display: inline;
+  margin: 0;
+}
+
+#go-button {
+  background-color: #000000;
+  color: white;
+  border: none;
+  border-radius: 1.9rem;
+  padding: 0.6rem 2rem;
+  margin-top: 0.2rem;
+  margin-bottom: 0.2rem;
+  font-weight: 800;
+  font-size: 1.5rem;
+}
+
+#end-button {
+  background-color: #000000;
+  color: white;
+  border: none;
+  border-radius: 1.9rem;
+  padding: 1rem;
+  margin-top: 0.2rem;
+  margin-bottom: 0.2rem;
+  font-weight: 800;
+  width: 80%;
+}
+
+label {
+  font-weight: 600;
+}
+
+#update-start-odometer {
+  padding-left: 8px;
+  padding-right: 8px;
+  text-align: center;
+  box-shadow: 0 -0.5rem 1.5rem rgba(0, 0, 0, 0.28);
+}
+
+#quick-go-container {
+  display: flex;
+  flex-direction: column; /* Stack items vertically */
+  align-items: center; /* Center horizontally */
+  justify-content: center; /* Center vertically */
+  gap: 1rem; /* Space between the button and input */
+}
+
+#quick-go-actions{
+  display: flex;
+  flex-direction: column; 
+  justify-content: center;
+  align-items: center; 
+  gap: 10px;
+}
+
+#quick-go-update {
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  gap: 10px;
+}
+
+#quick-go-update label {
+  color: #000000;
+  font-size: 0.9rem;
+}
 
 input {
-    border: solid rgb(194, 194, 194) 1px;
-    font-size: 16px;
-  }
+  border: none;
+  border-radius: 1rem;
+  padding:0.5rem;
+  max-width: 40%;
+  text-align: center;
+  box-shadow: 0 -0.5rem 1.5rem rgba(0, 0, 0, 0.28);
+}
+
+#log-form {
+  width: 100%;
+  box-sizing: border-box;
+}
+
+#go-button i.fas.fa-car {
+  color: #ffffff; 
+  padding-right: 1rem
+}
+
+#daily-log-form {
+  display: flex;
+  flex-direction: column; 
+  justify-content: center;
+  align-items: center; 
+}
+
+#daily-log-form input {
+  box-shadow: 0 -0.5rem 1.5rem rgba(0, 0, 0, 0.28);
+}
+
+textarea {
+  border: none;
+  border-radius: 1rem;
+  padding:0.6rem;
+  margin: 0.3rem;
+  box-shadow: 0 0 2rem rgba(0, 0, 0, 0.17);
+  text-align: center;
+}
+
+#entry-button {
+  width: 85%;
+  background-color: #000000;
+  color: white;
+  border: none;
+  border-radius: 1.9rem;
+  padding: 0.7rem;
+  font-family: sans-serif;
+  font-weight: 800;
+  margin-bottom: 0rem;
+  margin-top: 0.5rem;
+}
+
+#logo {
+  width: 3.5rem;
+  margin: 0px;
+}
+
+label {
+  padding: 0.3rem;
+  margin-bottom: 0.3rem;
+  font-size: 0.8rem;
+}
+
+
+.odometer-fields {
+  display: flex; 
+  justify-content: center;
+  align-items: center; 
+  gap: 0px; 
+  margin-top: 0.3rem;
+}
+
+.odometer-field {
+  display: flex;
+  flex-direction: column; 
+  align-items: center; 
+  text-align: center;
+}
+
+.odometer-field label {
+  margin-bottom: 5px;
+  padding: 0px rem;
+}
+
+.odometer-field input {
+  
+  border-radius: 1rem;
+  padding: 0.5rem;
+  box-shadow: 0 -0.5rem 1.5rem rgba(0, 0, 0, 0.28);
+  text-align: center;
+  width: 100%;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+#purpose {
+  width: 81%;
+ height: 4rem;
+}
+
+textarea {
+  box-shadow: 0 -0.5rem 1.5rem rgba(0, 0, 0, 0.28);
+}
+
+label {
+  font-family: sans-serif;
+  font-size: 0.8rem;
+}
+
+.date {
+  display: flex;
+  align-items: flex-start;
+  
+}
+
+#date input {
+  padding-left: 10.9rem;
+  padding-right: 10.9rem;
+  width: 2rem;
+  box-shadow: 0 -0.5rem 1.5rem rgba(0, 0, 0, 0.28);
+}
+
+#date-container {
+  width: 100%;
+}
+
+
+
+
+
