--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ ul {
   margin-top: 0.2rem;
   margin-bottom: 0.2rem;
   font-weight: 800;
+  font-size: 1.5rem;
 }
 
 #end-button {
@@ -71,9 +72,6 @@ ul {
   font-weight: 800;
   width: 80%;
 }
-
-
-
 
 label {
   font-weight: 600;
@@ -199,7 +197,7 @@ label {
 }
 
 .odometer-field input {
-  border: none;
+  
   border-radius: 1rem;
   padding: 0.5rem;
   box-shadow: 0 -0.5rem 1.5rem rgba(0, 0, 0, 0.28);
@@ -238,10 +236,6 @@ label {
 
 #date-container {
   width: 100%;
-}
-
-input {
-  box-shadow: 0 0 3rem rgba(0, 0, 0, 0.17);
 }
 
 
