--- a/log_style.css
+++ b/log_style.css
@@ -13,6 +13,18 @@ strong {
     box-sizing: border-box;
 }
 
+.vs {
+    max-width: 92%;
+    width: 87%;
+    position: relative; 
+    padding-bottom: 1rem;
+    text-align: center;
+    color: #000000;
+    transform: translateX(-50%);
+    left: 50%;
+    margin: 0px;
+  }
+  
 table {
     width: 100%;
     border-collapse: collapse;
