--- a/style.css
+++ b/style.css
@@ -39,19 +39,44 @@ i {
   font-size: 1.5rem;
 }
 
-.vs {
-
-  position: relative; 
+.vvs {
   padding-bottom: 1rem;
   text-align: center;
   color: #000000;
-  margin-left: 0px;
-  margin-right: 0px;
-  margin: 0px;
-  top: calc(4rem + var(--hs-height, 0px));
-  transform: translateX(-50%);
-    left: 50%;
 }
+.hhs {
+  
+  display: flex;
+  justify-content: center;
+  z-index: 1;
+  display: flex;
+}
+
+#outerdiv {
+  position: absolute;
+  gap: 1rem;
+  width: 90%;
+  top: 5.7rem; 
+  display: flex;
+  justify-content: center;
+  z-index: 1;
+  display: flex;
+  transform: translateX(-50%);
+  left: 50%;
+  flex-wrap: wrap;
+  overflow-y: auto; 
+}
+
+.hhs, .vvs {
+  width: 80%; 
+  background: #fff;
+  padding: 0.7rem;
+  border-radius: 1.2rem;
+  box-shadow: 0 0 3rem rgba(0, 0, 0, 0.17);
+  margin: 0px;
+}
+
+
 
 ul {
   list-style: none;
@@ -248,6 +273,11 @@ label {
 #date-container {
   width: 100%;
 }
+
+
+
+
+
 
 
 
