--- a/global.css
+++ b/global.css
@@ -111,6 +111,7 @@
     position: absolute;
     top: 9rem;
     bottom: 0;
+    height: 100%;
     width: 100%;
     background: #fff;
     border-radius: 1.5rem 1.5rem 0 0;
