--- a/global.css
+++ b/global.css
@@ -111,7 +111,7 @@
     position: absolute;
     top: 9rem;
     bottom: 0;
-    
+    height: auto;
     width: 100%;
     background: #fff;
     border-radius: 1.5rem 1.5rem 0 0;
@@ -125,6 +125,7 @@
   .app--body no-scrollbar {
     width: 100%;
     bottom: 0;
+    
   }
   
   .app--body > * {
