--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ i {
   left: 50%;
   flex-wrap: wrap;
   overflow-y: auto; 
+  margin-bottom: 2rem;
 }
 
 .hhs, .vvs {
@@ -73,7 +74,6 @@ i {
   padding: 0.7rem;
   border-radius: 1.2rem;
   box-shadow: 0 0 3rem rgba(0, 0, 0, 0.17);
-  margin: 0px;
 }
 
 
