--- a/global.css
+++ b/global.css
@@ -37,7 +37,7 @@
     margin-right: 0.4rem;
   }
   h2 {
-    font-size: 2rem;
+    font-size: 1.9rem;
     margin: 0px;
     padding: 0px;
     margin-bottom:1rem;
@@ -118,7 +118,7 @@
     position: absolute;
     top: 9rem;
     bottom: 0;
-    height: calc(100vh - 9rem);
+    height: auto;
     width: 100%;
     background: #fff;
     border-radius: 1.5rem 1.5rem 0 0;
@@ -138,7 +138,6 @@
     width: 100%; 
     max-width: 100%;
     margin: 0 auto; 
-    height: calc(100vh - 9rem);
   }
   
   .app > * {
@@ -183,4 +182,5 @@
   #date {
     color: #000000;
   }
+
 
