--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ i {
 }
 
 .hhs, .vvs {
-  width: 80%; 
+  width: 90%; 
   background: #fff;
   
   border-radius: 1.2rem;
@@ -97,6 +97,8 @@ ul {
   padding: 0.6rem 2rem;
   margin-top: 0.2rem;
   margin-bottom: 0.2rem;
+  margin-left: 0.6rem;
+  margin-right: 0.6rem;
   font-weight: 800;
   font-size: 1.5rem;
 }
@@ -282,15 +284,6 @@ label {
 #date-container {
   width: 100%;
 }
-
-
-
-
-
-
-
-
-
 
 
 
